(r6071) Fix a vanilla glitch: A merge recipe for the guardian vest was missing.
(r6043) Fix a vanilla display glitch in debug mode: When turning of the Z-buffer display, the screen was not redrawn.

v0.12.1 - 2009-06-15
(r6011) Fix a bug in r5121 which prevented hiring mercs from AIM.
(r6005) Fix a vanilla buffer overflow when loading/saving savegames.

v0.12 - 2009-06-12 - Walnut
(r5970) Slightly improve the cursor key handling in the load/save screen.
(r5852) Fix a vanilla out of bounds array access when a wall gets damaged.
(r5787) Fix a vanilla bug: Throwing a knife costed one point less than it should.
(r5732) Fix a vanilla display glitch: The item tooltip for the auto rocket rifle should not show "(rocket)", just like for the rocket rifle.
(r5730) Fix a vanilla display glitch: Do not print "0" in the item description box, when a gun uses no ammunition (e.g. LAW).
(r5721) Fix a vanilla bug: When an enemy soldier is looking for items in one case not all weapons, which have a fingerprint ID, were considered correctly.
(r5719) Fix a vanilla bug: When an enemy soldier is looking for items and finds a non-helmet/vest/leggings piece of armour it was incorrectly considered for pickup.
(r5673) Adjust the char-to-glyph translation table for the French version, so "i" with circumflex is displayed correctly.
(r5651) Fix a vanilla bug: Closing the laptop, while a page in the browser is loading, caused artifacts (not deleted GUI elements, accessing not loaded graphics).
(r5621, r5623) Always make the tooltips of the contract button and the inventory toggle region available, even if they are deactivated.
(r5553) Fix a bug in r1791 which caused a null-pointer access when loading a savegame which starts in tactical mode and all mercs are busy.
(r5494) Now the game runs on (little-endian) 64bit architectures (AMD64), too.
(r5482) Fix a bug in r3969, which prevented reentering a sector after fleeing from a battle there in the Windows version.